# Ani-schedule

./: Cargo.toml  README.md
src/: main.rs
src/modules/: ani.rs  mod.rs  structs.rs
