[package]
name = "ani_schedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tao = "0"
tray-icon = "0"
image = "0"
reqwest = { version = "0", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
chrono = "0"